src/test/ui/hygiene/fields.stderr
error: type `foo::S` is private
  --> $DIR/fields.rs:15:17
   |
LL |         let s = S { x: 0 };
   |                 ^^^^^^^^^^ private type
...
LL |     let s = foo::m!(S, x);
   |             ------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `foo::S` is private
  --> $DIR/fields.rs:16:17
   |
LL |         let _ = s.x;
   |                 ^ private type
...
LL |     let s = foo::m!(S, x);
   |             ------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `foo::T` is private
  --> $DIR/fields.rs:18:17
   |
LL |         let t = T(0);
   |                 ^^^^ private type
...
LL |     let s = foo::m!(S, x);
   |             ------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: type `foo::T` is private
  --> $DIR/fields.rs:19:17
   |
LL |         let _ = t.0;
   |                 ^ private type
...
LL |     let s = foo::m!(S, x);
   |             ------------- in this macro invocation
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 4 previous errors

